@@ -1,3 +1,7 @@
+2005-06-22 Vlad Seryakov vlad@crystalballinc.com
+
+	* statistics and NAPTR searching
+
 2005-06-20 Vlad Seryakov vlad@crystalballinc.com
 
 	* re-strcutured for multiple clients
